--- a/css/creative.css
+++ b/css/creative.css
@@ -9657,7 +9657,7 @@ hr.light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 72px);
-  background: linear-gradient(to bottom,rgba(99, 99, 99, 0.2) 0,rgba(6, 5, 4, 0.7) 100%),url(../img/namur.jpg);
+  background: linear-gradient(to bottom,rgba(99, 99, 99, 0.2) 0,rgba(6, 5, 4, 0.7) 100%),url(../img/ut-tower.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
