--- a/css/creative.css
+++ b/css/creative.css
@@ -20,6 +20,9 @@ body {
   background-color: #ffffff;
 }
 
+strong.red {color:red;}
+strong.grn {color:green;}
+
 hr {
   box-sizing: content-box;
   height: 0;
