--- a/css/creative.css
+++ b/css/creative.css
@@ -29,8 +29,9 @@ body {
   background-color: var(--bg);
 }
 
-strong.red {color:red;}
-strong.grn {color:green;}
+strong.red {color: red;}
+
+strong.grn {color: green;}
 
 hr {
   box-sizing: content-box;
@@ -1100,14 +1101,69 @@ mark,
   }
 }
 
-table.sch {border-collapse:collapse; width: 100%;}
-table.sch th {padding: 1em 0;}
-table.sch tr.sep {border-bottom:2pt solid orange; padding-top: 10pt;}
-table.sch td:first-child {white-space: nowrap;}
-table.sch table.sch td:first-child {padding-right: 1ex; padding-left: 3pt; border-left:2pt solid orange;}
-sub {font-size:120%; font-size:inherit;}
-sup {margin-left: -2pt;}
-.latex {font-family: serif;}
+table.sch {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table.sch th {
+  padding: 1em 0;
+}
+
+table.sch td {
+  padding-bottom: 0.5em;
+  text-align: left;
+}
+
+table.sch td:first-child {
+  white-space: nowrap;
+  max-width: 8em;
+}
+
+table.sch tr.sep {
+  border-bottom: 1pt solid var(--border);
+}
+
+table.sch td:has(> table.sch) {
+  padding-left: 1em;
+}
+
+table.sch table.sch {
+  border-left: 2pt solid var(--accent);
+}
+
+table.sch table.sch td {
+  vertical-align: top;
+}
+
+table.sch table.sch td:first-child {
+  padding-left: 0.75em;
+  padding-right: 1.625em;
+}
+
+table.sch table.sch td:last-child {
+  width: 100%;
+  white-space: normal;
+}
+
+.latex {
+  line-height: 1; /* Keep the lines tight */
+  font-family: "Times New Roman", serif;
+  text-transform: uppercase;
+}
+
+.latex > .a {
+  font-size: 0.85em;
+  vertical-align: 0.15ex;
+  margin-left: -0.375em;
+  margin-right: -0.15em;
+}
+
+.latex > .e {
+  vertical-align: -0.5ex;
+  margin-left: -0.15em;
+  margin-right: -0.125em;
+}
 
 body,
 html {
