--- a/pre/proceedings.css
+++ b/pre/proceedings.css
@@ -14,6 +14,8 @@ a, a:link, a:visited, a:hover, .hl {color:#EBE183;}
 	margin-right: 5ex;
 }
 
+.pages a {color:white;}
+
 .class {font-size: smaller;}
 .class span {display: none; padding-left: 5px;}
 .class:hover span {display: inline;}
